# nonebot-plugin-bilichat

./: .gitignore  README.md  bot.py  build_webui.py  pyproject.toml  v11_selfmsg_hook.py
.github/ISSUE_TEMPLATE/: bug_report.yml
docs/: Update newBing cookie via tampermonkey script.md
nonebot_plugin_bilichat/: __init__.py  auth.py  base_content_parsing.py  config.py  migrate.py  optional.py  utils.py  wordcloud.py
nonebot_plugin_bilichat/adapters/: __init__.py  adapter_handler.py  base.py  base_content_parsing.py  mirai2.py  onebot_v11.py  onebot_v12.py  qq.py  qqguild.py
nonebot_plugin_bilichat/adapters/mirai2/: __init__.py  adapter_handler.py  base_content_parsing.py  commands.py
nonebot_plugin_bilichat/adapters/onebot_v11/: adapter_handler.py  base_content_parsing.py  commands.py
nonebot_plugin_bilichat/adapters/onebot_v12/: __init__.py  base_content_parsing.py
nonebot_plugin_bilichat/adapters/qq/: adapter_handler.py  base_content_parsing.py  commands.py
nonebot_plugin_bilichat/adatpters/: __init__.py  mirai2.py  onebot_v11.py  onebot_v12.py  qqguild.py
nonebot_plugin_bilichat/api/: __init__.py  auth.py  base.py  bilibili_auth.py  bilibili_cookies.py  config.py  newbing_cookies.py  subs.py  subs_config.py  webui.py
nonebot_plugin_bilichat/archive/adapters/: base_content_parsing.py  mirai2.py  onebot_v11.py  onebot_v12.py  qq.py
nonebot_plugin_bilichat/bot_select/: __init__.py  expection.py  registries.py  target.py
nonebot_plugin_bilichat/bot_select/adapters/: __init__.py  dodo.py  kaiheila.py  onebot_v11.py  onebot_v12.py  qq.py  red.py  satori.py
nonebot_plugin_bilichat/command/: __init__.py  base.py  functions.py  login.py  otp.py  subs.py  subs_request.py
nonebot_plugin_bilichat/commands/: __init__.py  auto_delete_subs.py  base.py  check_dynamic.py  functions.py  leave_group.py  login.py  modify_cfg.py  onebot_leave_group.py  subs.py  subs_cfg.py  subs_request.py
nonebot_plugin_bilichat/commands/adapters/: __init__.py  mirai2.py  onebot_v11.py
nonebot_plugin_bilichat/content/: __init__.py  column.py  dynamic.py  video.py
nonebot_plugin_bilichat/lib/: __init__.py  auth.py  b23_extract.py  bcut_asr.py  bilibili_request.py  browser.py  column_resolve.py  content_cd.py  content_resolve.py  content_summarise.py  draw_bili_image.py  draw_video_image.py  fetch_dynamic.py  fonts_provider.py  message_resolve.py  openai.py  store.py  strings.py  text_to_image.py  tools.py  uid_extract.py  video_subtitle.py  wordcloud.py
nonebot_plugin_bilichat/lib/bilibili_request/: __init__.py  auth.py  gRPC.py  restAPI.py
nonebot_plugin_bilichat/lib/cache/: __init__.py  cache.py  json_cache.py  mongo_cache.py
nonebot_plugin_bilichat/lib/draw/: __init__.py
nonebot_plugin_bilichat/lib/draw/column/: __init__.py  browser_shot.py
nonebot_plugin_bilichat/lib/draw/dynamic/: __init__.py  browser_shot.py  dynamicrender.py
nonebot_plugin_bilichat/lib/draw/video/: __init__.py  bbot_default.py  style_blue.py
nonebot_plugin_bilichat/model/: api.py  arguments.py  bcut_asr.py  cache.py  config.py  const.py  content.py  exception.py  newbing.py  openai.py  request_api.py  subscribe.py
nonebot_plugin_bilichat/model/api/: __init__.py  bilibili_auth.py  subs_config.py
nonebot_plugin_bilichat/model/bilibili/: live.py  summary.py
nonebot_plugin_bilichat/request_api/: __init__.py  base.py  local.py  model.py
nonebot_plugin_bilichat/static/: config.yaml  upload-webui.html
nonebot_plugin_bilichat/static/browser/: mobile_style.js
nonebot_plugin_bilichat/static/html/: 404.html  index.html  index.txt
nonebot_plugin_bilichat/static/html/404/: index.html
nonebot_plugin_bilichat/static/html/_next/static/chunks/: 182-27df1ee26a1126cc.js  310-2086902cd2d56879.js  4bd1b696-7169861da40f817b.js  684-5a9ecabb2c5a99ca.js  824-6ec2445d552b1a95.js  framework-29ac49a6a3fd316f.js  main-app-66e4e8f14de519a0.js  main-f3d62d66a9882872.js  webpack-d8f6f781f4818f13.js
nonebot_plugin_bilichat/static/html/_next/static/chunks/app/: layout-392f243d8b56e4fc.js  layout-79de70319398d209.js  page-0cc6db1c821956e5.js  page-44deda3db388fd46.js  page-9b37dd38ece481eb.js
nonebot_plugin_bilichat/static/html/_next/static/css/: 0ee29b944a7b0f75.css  269effbe6ff70fa7.css  b120297899451b79.css
nonebot_plugin_bilichat/static/html/_next/static/w32KF3xq-wtkS37zZEMqD/: _buildManifest.js
nonebot_plugin_bilichat/static/html/assets/: index.BUmPr0VB.js  index.BrwYvDX7.css  index.CyY5WmEf.css  index.D-t4Jr6q.js  index.Doq51I0A.js  index.qFtZBeOB.js  index.rmATwuSI.css  lodash-vendor.DMIDq1rY.js  naive-ui-vendor.Dy4dmAY1.js  utils.B4jMxAnu.js  utils.CBXTS7j5.js  utils.CTQ8OqS_.js  vendor.CRBq5BKZ.js  vendor.XuBSy0Y2.js  vendor.cCBPk__2.js  vjsf-vendor.BLy33ZKn.js  vjsf-vendor.Bvzdyhxd.js  vue-vendor.DUSQ37nN.js
nonebot_plugin_bilichat/static/style_blue/: video-details.html
nonebot_plugin_bilichat/static/summary/: index.html  marked.min.js
nonebot_plugin_bilichat/static/web/: bili_cookies.html  index.html  subs_config.html
nonebot_plugin_bilichat/subscribe/: __init__.py  dynamic.py  fetch_and_push.py  live.py  manager.py  status.py
nonebot_plugin_bilichat/summary/: __init__.py  content_summarise.py  newbing.py  newbing_summarise.py  openai.py  openai_summarise.py  text_to_image.py
nonebot_plugin_bilichat/summary/EdgeGPT/: chathub.py
nonebot_plugin_bilichat/wordcloud/: wordcloud.py
webui/bilichat-webui/: next.config.ts  package.json
webui/bilichat-webui/app/: globals.css  layout.tsx  page.tsx
webui/bilichat-webui/components/: badge.tsx  config-editor.tsx  config-field.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
webui/bilichat-webui/hooks/: use-auth.ts  use-config.ts
webui/bilichat-webui/lib/: api.ts  i18n.tsx  otp.ts
