[project]
name = "nonebot-plugin-bilichat"

version = "6.0.1"

description = "全功能的 bilibili 内容解析器及订阅器"
authors = [
    { name = "djkcyl", email = "cyl@cyllive.cn" },
    { name = "Well404", email = "well_404@outlook.com" },
]
dependencies = [
    "nonebot-plugin-localstore>=0.7.3",
    "nonebot2[fastapi,websockets]",
    "httpx>=0.28.1",
    "nonebot-plugin-apscheduler>=0.5.0",
    "python-multipart>=0.0.20",
    "nonebot-plugin-alconna>=0.54.1",
    "nonebot-plugin-waiter>=0.8.0",
    "nonebot-plugin-sentry>=2.0.0",
    "packaging>=24.2",
    "pydantic>=2.10.4",
    "nonebot-plugin-uninfo>=0.6.2",
    "pyyaml>=6.0.2",
    "pypng>=0.20220715.0",
    "qrcode>=8.0",
    "pytz>=2024.2",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "AGPL3.0" }
[project.optional-dependencies]
extra = ["bilichat-request>=0.1.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["tests/"]

[tool.ruff.lint]
select = [
    # Flake8 Core Rules
    'E', # pycodestyle (Error): 风格错误
    'F', # pyflakes: 常见错误

    # Flake8 Built-in Plugins
    'A',     # flake8-builtins: 避免内置名称
    'ANN',   # flake8-annotations: 类型注解相关
    'ARG',   # flake8-unused-arguments: 未使用的参数
    'ASYNC', # flake8-async: 异步相关
    'B',     # flake8-bugbear: 常见错误
    'C4',    # flake8-comprehensions: 推导式相关
    'COM',   # flake8-commas: 逗号相关
    'DJ',    # flake8-django: Django 相关
    'DTZ',   # flake8-datetimez: 日期时间相关
    'EXE',   # flake8-executable: 可执行文件相关
    'FA',    # flake8-future-annotations: 未来注解
    'FBT',   # flake8-boolean-trap: 布尔陷阱
    'FIX',   # flake8-fixme: FIXME 注释
    'G',     # flake8-logging-format: 日志格式
    'ICN',   # flake8-import-conventions: 导入约定
    'INT',   # flake8-gettext: 国际化相关
    'ISC',   # flake8-implicit-str-concat: 隐式字符串连接
    'LOG',   # flake8-logging: 日志相关
    'PIE',   # flake8-pie: Python 代码改进
    'PT',    # flake8-pytest-style: Pytest 风格
    'PTH',   # flake8-use-pathlib: 使用 pathlib
    'PYI',   # flake8-pyi: 类型注解文件
    'Q',     # flake8-quotes: 引号使用
    'S',     # flake8-bandit: 安全性检查
    'SIM',   # flake8-simplify: 简化代码
    'SLOT',  # flake8-slots: 使用 __slots__
    'T10',   # flake8-debugger: 调试器相关
    'T20',   # flake8-print: 打印语句
    'TC',    # flake8-type-checking: 类型检查
    'YTT',   # flake8-2020: Python 版本兼容

    # Complexity and Performance
    'C90',  # mccabe: 复杂度检查
    'PERF', # Perflint: 性能优化

    # Code Quality and Refactoring
    'FURB', # refurb: 代码重构
    'SIM',  # flake8-simplify: 简化代码
    'TRY',  # tryceratops: 异常处理

    # Formatting and Code Style
    'FLY', # flynt: 字符串格式化
    'N',   # pep8-naming: 命名约定

    # Import Management
    'I', # isort: 导入排序

    # Framework-Specific Rules
    'AIR',  # Airflow: Airflow 相关规则
    'FAST', # FastAPI: FastAPI 相关
    'DJ',   # flake8-django: Django 相关
    'NPY',  # NumPy-specific rules: NumPy 相关
    'PD',   # pandas-vet: Pandas 相关

    # Type Annotations and Checking
    'ANN', # flake8-annotations: 类型注解相关
    'FA',  # flake8-future-annotations: 未来注解
    'TC',  # flake8-type-checking: 类型检查
    'PYI', # flake8-pyi: 类型注解文件

    # Logging
    'G',   # flake8-logging-format: 日志格式
    'LOG', # flake8-logging: 日志相关

    # Import Conventions
    'ICN', # flake8-import-conventions: 导入约定
    'I',   # isort: 导入排序

    # Miscellaneous Tools
    'PL',  # Pylint (Convention): Pylint 约定
    'PGH', # pygrep-hooks: 预提交钩子
    'RUF', # Ruff-specific rules: Ruff 规则
    'UP',  # pyupgrade: 代码升级
]

ignore = [
    # Annotations
    "ANN002", # 缺少 *args 的类型注解
    "ANN003", # 缺少 **kwargs 的类型注解
    "ANN201", # 公共函数缺少返回类型注解
    "ANN401", # 缺少类型注解
    "PGH003", # 使用 type ignore 注释

    # Asynchronous
    "ASYNC110", # 事件循环未运行

    # Bugbear
    "B008", # 不要在参数默认值中执行函数调用

    # Complexity
    "C901",    # 函数过于复杂
    "PLR0912", # 分支过多
    "PLR0913", # 参数过多
    "PLR0915", # 语句过多

    # Code Style and Formatting
    "COM812", # 更一致的换行方式
    "E501",   # 行过长
    "N815",   # 变量名应为小写

    # Refactoring and Code Quality
    "F841",    # 局部变量赋值后未使用
    "PLR2004", # 使用了魔法值
    "TRY003",  # raise 语句不应包含变量
    "TRY301",  # raise 语句应在 except 块内

    # Import Management
    "ISC001", # 隐式字符串连接
    "TC001",  # 仅限类型注释的第一方导入

    # Performance
    "PERF401", # 检查可以用列表推导式替换的 for 循环

    # Security
    "S101", # 检测到 assert 的使用
    "S311", # 标准伪随机生成器不适用于安全/加密目的
    "S324", # 使用不安全的 MD5 哈希函数
    "S501", # 请求禁用证书验证
]


[dependency-groups]
dev = [
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-adapter-mirai2>=0.0.22",
    "nonebot-adapter-qq>=1.6.0",
    "nonebot-adapter-satori>=0.13.1",
]
